--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,5 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="size_18">18sp</dimen>
+    <dimen name="space_32">32dp</dimen>
+    <dimen name="space_24">24dp</dimen>
     <dimen name="space_16">16dp</dimen>
+    <dimen name="space_20">20dp</dimen>
+    <dimen name="space_18">18dp</dimen>
+    <dimen name="space_12">12dp</dimen>
+    <dimen name="space_10">10dp</dimen>
+    <dimen name="space_8">8dp</dimen>
+    <dimen name="space_6">6dp</dimen>
+    <dimen name="space_55">55dp</dimen>
+    <dimen name="space_1">1dp</dimen>
+    <dimen name="space_0">0dp</dimen>
+    <dimen name="space_3">3dp</dimen>
+    <dimen name="space_160">160dp</dimen>
+    <dimen name="space_320">320dp</dimen>
+    <dimen name="space_4">4dp</dimen>
+    <dimen name="space_120">120dp</dimen>
+    <dimen name="space_360">360dp</dimen>
+    <dimen name="space_60">60dp</dimen>
+    <dimen name="space_50">50dp</dimen>
+    <dimen name="space_45">45dp</dimen>
+    <dimen name="space_100">100dp</dimen>
+    <dimen name="space_90">90dp</dimen>
+    <dimen name="space_14">14dp</dimen>
+    <dimen name="space_220">220dp</dimen>
+    <dimen name="space_180">180dp</dimen>
+    <dimen name="space_150">150dp</dimen>
+    <dimen name="space_140">140dp</dimen>
+    <dimen name="space_340">340dp</dimen>
+    <dimen name="space_110">110dp</dimen>
+    <dimen name="space_80">80dp</dimen>
+
+    <dimen name="size_24">24sp</dimen>
+    <dimen name="size_12">12sp</dimen>
+    <dimen name="size_20">20sp</dimen>
+    <dimen name="size_16">16sp</dimen>
+    <dimen name="size_18">18sp</dimen>
+    <dimen name="size_14">14sp</dimen>
 </resources>
