--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -13,6 +13,8 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
 
+        <item name="android:homeAsUpIndicator">@drawable/ic_baseline_keyboard_backspace_24</item>
+
         <!-- font -->
         <item name="android:buttonStyle">@font/lato</item>
         <item name="android:fontFamily">@font/lato</item>
@@ -24,5 +26,50 @@
     <style name="DialogAnimation">
         <item name="android:windowEnterAnimation">@anim/slide_up</item>
         <item name="android:windowExitAnimation">@anim/slide_down</item>
+    </style>
+
+    <style name="Toolbar.Custom" parent="Base.ThemeOverlay.AppCompat.Dark.ActionBar">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:background">@color/colorPrimary</item>
+        <item name="titleTextColor">@color/black</item>
+        <item name="android:minHeight">?attr/actionBarSize</item>
+        <item name="colorControlNormal">@color/white</item>
+        <item name="android:contentInsetLeft">0dp</item>
+        <item name="android:contentInsetStart">0dp</item>
+        <item name="contentInsetLeft">0dp</item>
+        <item name="contentInsetStart">0dp</item>
+        <item name="contentInsetStartWithNavigation">0dp</item>
+    </style>
+
+    <style name="CustomTextAppearance" parent="TextAppearance.AppCompat">
+        <item name="android:textStyle">bold</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:textSize">16sp</item>
+    </style>
+
+    <style name="CustomTextInputLayout" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
+        <item name="boxStrokeWidth">1dp</item>
+        <item name="boxBackgroundColor">@color/colorWhite</item>
+        <item name="boxStrokeColor">@color/color_input_layout_selector</item>
+        <item name="boxStrokeErrorColor">@color/colorRed</item>
+        <item name="errorTextAppearance">@style/error_appearance</item>
+        <item name="hintTextAppearance">@style/error_appearance</item>
+        <item name="hintEnabled">false</item>
+    </style>
+
+    <style name="CustomWhiteEditText">
+        <item name="android:textColor">@color/colorTextGrey</item>
+        <item name="android:textCursorDrawable">@drawable/cursor_with_padding</item>
+        <item name="android:textColorHint">@color/colorTextHint</item>
+        <item name="android:paddingStart">16dp</item>
+        <item name="android:paddingEnd">@dimen/space_16</item>
+        <item name="android:paddingTop">@dimen/space_16</item>
+        <item name="android:paddingBottom">@dimen/space_16</item>
+    </style>
+
+    <style name="error_appearance" parent="@android:style/TextAppearance">
+        <item name="android:textColor">@color/colorAccent</item>
+        <item name="android:textSize">12sp</item>
     </style>
 </resources>
