--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -38,4 +38,5 @@
     <dimen name="size_16">16sp</dimen>
     <dimen name="size_18">18sp</dimen>
     <dimen name="size_14">14sp</dimen>
+    <dimen name="fab_margin">16dp</dimen>
 </resources>
