--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,249 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.MainActivity">
+    tools:context=".MainActivity">
 
-    <androidx.core.widget.NestedScrollView
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/showPagingMovieMB"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:fillViewport="true">
+        android:layout_height="@dimen/space_60"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="@dimen/space_8"
+        android:layout_marginEnd="16dp"
+        android:text="@string/show_movie_paging"
+        android:textAllCaps="false"
+        android:textSize="@dimen/size_16"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/showSampleMovieMB"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/space_60"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:text="@string/show_sample_movie"
+        android:textAllCaps="false"
+        android:textSize="@dimen/size_16"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/showPagingMovieMB" />
 
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/showPagingMovieMB"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/space_60"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="@dimen/space_8"
-                android:layout_marginEnd="16dp"
-                android:textStyle="bold"
-                android:textSize="@dimen/size_16"
-                android:text="@string/show_movie_paging"
-                android:textAllCaps="false"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <TextView
-                android:id="@+id/hintRemoteDataTV"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="@dimen/space_8"
-                android:layout_marginEnd="16dp"
-                android:background="@color/purple_500"
-                android:gravity="center"
-                android:paddingStart="@dimen/space_16"
-                android:paddingTop="@dimen/size_12"
-                android:paddingEnd="@dimen/space_16"
-                android:paddingBottom="@dimen/space_16"
-                android:text="@string/remote_data"
-                android:textColor="@color/white"
-                android:textSize="@dimen/size_18"
-                android:textStyle="bold"
-                app:drawableEndCompat="@drawable/ic_baseline_refresh_24"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/showPagingMovieMB" />
-
-            <TextView
-                android:id="@+id/noDataRemoteTV"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:drawablePadding="@dimen/space_6"
-                android:gravity="center|center_vertical"
-                android:overScrollMode="never"
-                android:text="@string/no_data_showing"
-                android:textColor="@color/colorTextGrey"
-                android:textSize="@dimen/size_18"
-                app:drawableStartCompat="@drawable/ic_baseline_info_24"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/hintRemoteDataTV" />
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/listDataRemoteRV"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:clipToPadding="false"
-                android:orientation="vertical"
-                android:overScrollMode="never"
-                android:paddingStart="@dimen/space_12"
-                android:paddingTop="@dimen/space_6"
-                android:paddingEnd="@dimen/space_12"
-                android:paddingBottom="@dimen/space_0"
-                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/noDataRemoteTV"
-                tools:itemCount="1"
-                tools:listitem="@layout/row_item_movie" />
-
-            <TextView
-                android:id="@+id/hintLocaleDataTV"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:background="@color/purple_500"
-                android:gravity="center"
-                android:paddingStart="@dimen/space_16"
-                android:paddingTop="@dimen/size_12"
-                android:paddingEnd="@dimen/space_16"
-                android:paddingBottom="@dimen/space_16"
-                android:text="@string/local_data"
-                android:textColor="@color/white"
-                android:textSize="@dimen/size_18"
-                android:textStyle="bold"
-                app:drawableEndCompat="@drawable/ic_baseline_clear_24"
-                app:layout_constraintEnd_toEndOf="@+id/hintRemoteDataTV"
-                app:layout_constraintStart_toStartOf="@+id/hintRemoteDataTV"
-                app:layout_constraintTop_toBottomOf="@+id/listDataRemoteRV" />
-
-            <TextView
-                android:id="@+id/noDataLocaleTV"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:drawablePadding="@dimen/space_6"
-                android:gravity="center|center_vertical"
-                android:text="@string/no_data_showing"
-                android:textColor="@color/colorTextGrey"
-                android:textSize="@dimen/size_18"
-                app:drawableStartCompat="@drawable/ic_baseline_info_24"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/hintLocaleDataTV" />
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/listDataLocaleRV"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:clipToPadding="false"
-                android:orientation="vertical"
-                android:overScrollMode="never"
-                android:paddingStart="@dimen/space_12"
-                android:paddingTop="@dimen/space_6"
-                android:paddingEnd="@dimen/space_12"
-                android:paddingBottom="@dimen/space_0"
-                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/noDataLocaleTV"
-                tools:itemCount="1"
-                tools:listitem="@layout/row_item_movie" />
-
-            <TextView
-                android:id="@+id/hintPrefDataTV"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:background="@color/purple_500"
-                android:gravity="center"
-                android:paddingStart="@dimen/space_16"
-                android:paddingTop="@dimen/size_12"
-                android:paddingEnd="@dimen/space_16"
-                android:paddingBottom="@dimen/space_16"
-                android:text="@string/shared_preference_data"
-                android:textColor="@color/white"
-                android:textSize="@dimen/size_18"
-                android:textStyle="bold"
-                app:drawableEndCompat="@drawable/ic_baseline_clear_24"
-                app:layout_constraintEnd_toEndOf="@+id/hintRemoteDataTV"
-                app:layout_constraintStart_toStartOf="@+id/hintRemoteDataTV"
-                app:layout_constraintTop_toBottomOf="@+id/listDataLocaleRV" />
-
-            <TextView
-                android:id="@+id/noDataPrefTV"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:layout_marginBottom="16dp"
-                android:drawablePadding="@dimen/space_6"
-                android:gravity="center|center_vertical"
-                android:text="@string/no_data_showing"
-                android:textColor="@color/colorTextGrey"
-                android:textSize="@dimen/size_18"
-                app:drawableStartCompat="@drawable/ic_baseline_info_24"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/hintPrefDataTV"
-                app:layout_constraintVertical_bias="0.0" />
-
-            <androidx.cardview.widget.CardView
-                android:id="@+id/cardPrefCV"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="16dp"
-                android:layout_marginEnd="16dp"
-                android:layout_marginBottom="16dp"
-                app:cardCornerRadius="@dimen/space_6"
-                app:cardElevation="@dimen/space_3"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/noDataPrefTV"
-                app:layout_constraintVertical_bias="0.0">
-
-                <androidx.constraintlayout.widget.ConstraintLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-
-                    <TextView
-                        android:id="@+id/movieNameTV"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="8dp"
-                        android:layout_marginTop="8dp"
-                        android:layout_marginEnd="8dp"
-                        android:ellipsize="end"
-                        android:maxLines="1"
-                        android:textSize="@dimen/size_16"
-                        android:textStyle="bold"
-                        app:layout_constraintEnd_toStartOf="@+id/nextIV"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"
-                        tools:text="Power Ranger - SPD" />
-
-                    <TextView
-                        android:id="@+id/movieDescTV"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="3dp"
-                        android:layout_marginBottom="8dp"
-                        android:ellipsize="end"
-                        android:maxLines="2"
-                        android:textColor="@color/colorTextGrey"
-                        android:textSize="@dimen/size_14"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toEndOf="@+id/movieNameTV"
-                        app:layout_constraintStart_toStartOf="@+id/movieNameTV"
-                        app:layout_constraintTop_toBottomOf="@+id/movieNameTV"
-                        app:layout_constraintVertical_bias="0.0"
-                        tools:text="Dr. Lily Houghton enlists the aid of wisecracking skipper Frank Wolff to take her down the Amazon in his dilapidated boat. Together, they search for an ancient tree that holds the power to heal – a discovery that will change the future of medicine." />
-
-                    <ImageView
-                        android:id="@+id/nextIV"
-                        android:layout_width="@dimen/space_24"
-                        android:layout_height="@dimen/space_24"
-                        android:layout_marginEnd="8dp"
-                        android:contentDescription="@string/todo"
-                        android:src="@drawable/ic_right_arrow"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
-                </androidx.constraintlayout.widget.ConstraintLayout>
-            </androidx.cardview.widget.CardView>
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-    </androidx.core.widget.NestedScrollView>
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
